--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -7,32 +7,36 @@
 var options = AzureADB2COptions.Value;
 }
 
-
 <ul class="navbar-nav">
 @if (User.Identity.IsAuthenticated)
 {
         @if (!string.IsNullOrEmpty(options.EditProfilePolicyId))
         {
             <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="EditProfile">
-                    <span class="text-dark">Hello @User.Identity.Name!</span>
-                </a>
+                <form method="get" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="EditProfile">
+                    <span class="text-dark">@User.Identity.Name</span>
+                    <button class="btn btn-sm btn-outline-secondary" type="submit">EditProfile</button>
+                </form>
             </li>
         }
         else
         {
             <li class="nav-item">
-                <span class="navbar-text text-dark">Hello @User.Identity.Name!</span>
+                <span class="navbar-text text-dark">@User.Identity.Name</span>
             </li>
         }
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignOut">Sign out</a>
+            <form method="get" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignOut">
+                <button class="btn btn-sm btn-outline-primary" type="submit">SignOut</button>
+            </form>
         </li>
 }
 else
 {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignIn">Sign in</a>
+            <form method="get" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignIn">
+                <button class="btn btn-sm btn-outline-primary" type="submit">SignIn</button>
+            </form>
         </li>
 }
 </ul>
