ResetPassword を追加した

--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -37,6 +37,9 @@ else
             <form method="get" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignIn">
                 <button class="btn btn-sm btn-outline-primary" type="submit">SignIn</button>
             </form>
+            <form method="get" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="ResetPassword">
+                <button class="btn btn-sm btn-outline-primary" type="submit">ResetPassword</button>
+            </form>
         </li>
 }
 </ul>
